C#/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffsetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetOffsetIcon(int hEle, int x, int y);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconSpace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetIconSpace(int hEle, int size);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_GetText(int hEle, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetText(int hEle, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetIcon(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconDisable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetIconDisable(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddAnimationFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_AddAnimationFrame(int hEle, int hImage, int uElapse);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_EnableAnimation", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_EnableAnimation(int hEle, bool bEnable, bool bLoopPlay);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_AddBkBorder(int hEle, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_AddBkFill(int hEle, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_AddBkImage(int hEle, int nState, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetBkInfoCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_ClearBkInfo(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboBox_Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_SetSelItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XComboBox_SetSelItem(int hEle, int iIndex);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_GetButtonRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_GetButtonRect(int hEle, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_SetButtonSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_SetButtonSize(int hEle, int size);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_SetDropHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_SetDropHeight(int hEle, int height);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_GetDropHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboBox_GetDropHeight(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_BindApapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_BindApapter(int hEle, int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_GetApapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboBox_GetApapter(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_SetItemTemplateXML", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_SetItemTemplateXML(int hEle, string pXmlFile);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_SetItemTemplateXMLFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_SetItemTemplateXMLFromString(int hEle, string pStringXML);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_EnableDrawButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_EnableDrawButton(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_EnableEdit", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_EnableEdit(int hEle, bool bEdit);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_AddBkBorder(int hEle, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_AddBkFill(int hEle, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_AddBkImage(int hEle, int nState, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XComboboX_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboboX_GetBkInfoCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XComboBox_ClearBkInfo(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_GetSelItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboBox_GetSelItem(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XComboBox_GetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XComboBox_GetState(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XAdapter_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XAdapter_Destroy(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Create();

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_AddColumn(int hAdapter, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_AddItemText(int hAdapter, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_AddItemTextEx(int hAdapter, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_AddItemImage(int hAdapter, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_AddItemImageEx(int hAdapter, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Group_SetText(int hAdapter, int iGroup, int iColumn, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_SetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Group_SetTextEx(int hAdapter, int iGroup, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_SetImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Group_SetImage(int hAdapter, int iGroup, int iColumn, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_SetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XAdapterListView_Group_SetImageEx(int hAdapter, int iGroup, string pName, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Group_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Group_GetCount(int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_GetCount(int hAdapter, int iGroup);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_AddColumn(int hAdapter, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_AddItemText(int hAdapter, int iGroup, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_AddItemTextEx(int hAdapter, int iGroup, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XAdapterListView_Item_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XAdapterListView_Item_AddItemImage(int hAdapter, int iGroup, int hImage);
